...
      return;
    }
    setPage(page + 1);
    fetchVideos();
  };
  return (
    <View style={styles.container} testID='videoScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={videoList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
